argocd/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.yourdomain.com`)
      kind: Rule
      services:
        - name: argocd
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik-internal
  tls: {}
